# bsu-os

./: CMakeLists.txt  README.md  channel.h  killer.cpp  killer.h  main.cpp  mainKiller.cpp  mainUser.cpp  user.cpp  user.h
A/: main.cpp
Lab1Part2/Lab1_Lin/: CMakeLists.txt  main.cpp
Lab1Part2/num/: CMakeLists.txt  library.cpp  library.h
Lab1Part2/vec/: CMakeLists.txt  vec.cpp  vec.h
Lab1Term/: main  test
Lab1_Win/: Lab1_Win.sln
Lab1_Win/Lab1_Win/: Lab1_Win.cpp  Lab1_Win.vcxproj  Lab1_Win.vcxproj.filters
M/: CMakeLists.txt  main.cpp
Number/: Number.sln
Number/Number/: Number.cpp  Number.h  Number.vcxproj
P/: CMakeLists.txt  main.cpp
S/: CMakeLists.txt  main.cpp
Vector/: Vector.sln
Vector/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
main/: main.cpp
